set @media max-height to 1186 to fix chat and input overlap

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -261,3 +261,9 @@ input[type='range']::-moz-range-track {
     background-color: #ddd;
     border-radius: 5px;
 }
+
+@media (max-height: 1186px) {
+    .chatbox {
+        height: 980px;
+    }
+}
